<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="action_sign_in_short">Regisztrálás</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Jelszó</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Szeretne csatlakozni? Itt megteheti!</string>
    <string name="btn_link_to_login">Már regisztrált tag. Jelenkezzen be!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Elfelejtette a jelszavát?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Kijelentkezés</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="ad_title">Hírdetés cím</string>
    <string name="ad_description">Hírdetés leírás</string>
    <string name="ad_location">Helység</string>
    <string name="save_ad">Mentés</string>
    <string name="signin">"Bejelentkezés</string>
    <string name="addadvertisement">Hírdetés hozzáadás</string>
    <string name="first_name">Vezetéknév</string>
    <string name="last_name">Keresztév</string>
    <string name="Email">Email</string>
    <string name="phone_number">Telefonszám</string>
    <string name="Password">Jelszó</string>
    <string name="Confirmpassword">Jelszó mégegyszer</string>
    <string name="save">Mentés</string>
</resources>
