<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="20dp" >

            <EditText
                android:id="@+id/ad_title"
                android:hint="@string/ad_title"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/ad_description"
                android:hint="@string/ad_description"
                android:layout_below="@id/ad_title"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/ad_location"
                android:hint="@string/ad_location"
                android:layout_below="@id/ad_description"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:textSize="12sp" />

    <Button
        android:id="@+id/save_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ad_location"
        android:layout_marginTop="33dp"
        android:layout_weight="1"
        android:text="@string/save_ad" />

</RelativeLayout>
